--- a/Mk1 Fusion Reactor.ipynb
+++ b/Mk1 Fusion Reactor.ipynb
@@ -67,22 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "897dd4e4-61ae-499f-b2b5-b5d130637543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = 'Processing solar models/Smoothed model/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "db050c14-e67d-41de-aed9-f054503759c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SSM_r = np.array(pd.read_csv('Smoothing/X_7Be.csv',names=['r','q'],skiprows=1,index_col=False)['r'])\n",
-    "SSM_T = np.array(pd.read_csv('Smoothing/T.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_rho = np.array(pd.read_csv('Smoothing/rho.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_P = np.array(pd.read_csv('Smoothing/P.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_H = np.array(pd.read_csv('Smoothing/X_H.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_He4 = np.array(pd.read_csv('Smoothing/X_He4.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_He3 = np.array(pd.read_csv('Smoothing/X_He3.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_C12 = np.array(pd.read_csv('Smoothing/X_C12.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_N14 = np.array(pd.read_csv('Smoothing/X_N14.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_O16 = np.array(pd.read_csv('Smoothing/X_N16.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
-    "SSM_Be7 = np.array(pd.read_csv('Smoothing/X_7Be.csv',names=['r','q'],skiprows=1,index_col=False)['q'])"
+    "SSM_r = np.array(pd.read_csv(filepath+'X_7Be.csv',names=['r','q'],skiprows=1,index_col=False)['r'])\n",
+    "SSM_T = np.array(pd.read_csv(filepath+'T.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_rho = np.array(pd.read_csv(filepath+'rho.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_P = np.array(pd.read_csv(filepath+'P.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_H = np.array(pd.read_csv(filepath+'X_H.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_He4 = np.array(pd.read_csv(filepath+'X_He4.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_He3 = np.array(pd.read_csv(filepath+'X_He3.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_C12 = np.array(pd.read_csv(filepath+'X_C12.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_N14 = np.array(pd.read_csv(filepath+'X_N14.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_O16 = np.array(pd.read_csv(filepath+'X_N16.csv',names=['r','q'],skiprows=1,index_col=False)['q'])\n",
+    "SSM_Be7 = np.array(pd.read_csv(filepath+'X_7Be.csv',names=['r','q'],skiprows=1,index_col=False)['q'])"
    ]
   },
   {
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9ece3194-19b5-4786-b2be-e7d3d090e4c8",
    "metadata": {},
    "outputs": [],
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "74b178bc-89a0-4988-ba8e-7ed9dc284861",
    "metadata": {},
    "outputs": [],
@@ -210,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f2e0fa96-2b41-4ed2-8e26-7f3d7f1e0aa3",
    "metadata": {},
    "outputs": [],
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "76c5abaa-6a8a-4907-9552-004c845a059d",
    "metadata": {},
    "outputs": [],
@@ -255,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f620f57d-c3a9-4a02-8fb9-621df6cbd399",
    "metadata": {},
    "outputs": [
